--- a/app/src/main/res/layout/item_folder.xml
+++ b/app/src/main/res/layout/item_folder.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/buttonFolder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:titleTextAppearance="@style/ItalicToolbarText"
     android:text="@string/name_folder"
     android:padding="16dp"
     android:textAlignment="center"
